--- a/css/tech.css
+++ b/css/tech.css
@@ -61,4 +61,139 @@ color: #0b0217;
 input[type=submit]:hover{
   cursor: pointer;
 }
-   
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: #333;
+  color: white;
+  position: relative;
+}
+
+/* responsive */
+nav.active {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+nav h2.logo {
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+nav .bars {
+  position: absolute;
+  right: 1rem;
+  font-size: xx-large;
+  display: none;
+}
+
+ul.nav-links {
+  display: flex;
+}
+
+/* responsive */
+nav.active ul.nav-links {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.search-box{
+  display: flex;
+  align-items: center;
+ 
+}
+input[type=text]
+{
+  font-size: 20px;
+}
+li.nav-link {
+  list-style: none;
+  margin: 0.5rem 1rem;
+  padding: 0.4rem;
+  display: flex;
+  align-items: center;
+}
+
+li.nav-link:hover {
+  background-color: #ccc;
+  color: #333;
+}
+
+li.nav-link.auth {
+  border: 2px solid white;
+  border-radius: 1rem;
+}
+
+li.nav-link a {
+  text-decoration: none;
+  color: inherit;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: large;
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 800px) {
+  nav .bars {
+    display: block;
+  }
+
+  nav .nav-links {
+    display: none;
+  }
+}
+h2 {
+  text-transform: capitalize;
+  text-align: center;
+}
+
+table {
+  width: 700px;
+  margin: 20px auto;
+  margin-top: 70px;
+  background-color: #eeeeee;
+}
+
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+  padding: 15px;
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
+ th {
+  background-color: #404040;
+  color: white;
+}
+
+button {
+  font-size: 18px;
+  padding: 8px;
+  text-transform: capitalize;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.button_one {
+  background: #03a9f4;
+  color: white;
+}
+
+.button_two {
+  background: #e91e63;
+  color: white;
+}
+
+.bottom {
+  border-bottom: 2px solid #009688;
+}
